--- a/style.css
+++ b/style.css
@@ -214,12 +214,15 @@ body {
 }
 .find_film {
   position: absolute;
-  width: 725px;
+  width: 600px;
   height: 43px;
   left: 80px;
   margin-top: 450px;
   background: #16161f;
   border-radius: 50px;
+  overflow: hidden;
+  border: 0 none;
+  cursor: pointer;
 }
 .card-img-top {
   position: absolute;
@@ -228,4 +231,58 @@ body {
   left: 70px;
   top: 482px;
   opacity: 0.5;
+}
+
+.search {
+  border: 1px solid #ccc;
+  display: inline-block;
+  border-radius: 3px;
+  font-size: 20px;
+  color: white;
+}
+[type="search"] {
+  border: none;
+  outline: none;
+}
+.fas.fa-search {
+  color: #ccc;
+}
+
+input[type="text"]::-ms-clear {
+  display: none;
+  width: 0;
+  height: 0;
+}
+input[type="text"]::-ms-reveal {
+  display: none;
+  width: 0;
+  height: 0;
+}
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  display: none;
+}
+.films {
+  margin-top: 500px;
+  margin-left: 90px;
+}
+.list-group-item {
+  background-color: #16161f;
+  color: white;
+  border: 0 none;
+}
+.films button {
+  background-color: #16161f;
+  overflow: hidden;
+  border: 0 none !important;
+  cursor: pointer;
+}
+.card {
+  border: none;
+}
+.list-group-item img {
+  width: 50%;
+  height: 50%;
 }
